# doubledecker

./: .gitignore  Cargo.toml  README.md  dockerfile  rough_architectural_decisions.md
crates/inngest/: Cargo.toml
doubledecker/: Cargo.toml
frontend_files/: dataAggregation.ts  expanding_features.md  frontend_query_limitation.md  visualizationPreparers.ts
migrations/: 20260114000001_create_users_table.sql  20260114000002_create_saved_queries_table.sql  20260114000003_create_uploads_table.sql  20260706000001_royalty_engine_schema.sql  20260709000001_rbac_and_query_history.sql
src/: main.rs
src/db/: mod.rs  models.rs  operations.rs  pool.rs
src/db/queries/: catalog.rs  common.rs  datasets.rs  history.rs  mod.rs  payees.rs  rbac.rs  splits.rs  users.rs  workspaces.rs
src/engine/: executor.rs  mod.rs  udfs.rs
src/normalization/: adapters.rs  mod.rs
src/server/: analytics.rs  auth.rs  catalog.rs  core.rs  dtos.rs  executor.rs  extractors.rs  middleware.rs  mod.rs  openapi.rs  payees.rs  saved_queries.rs  splits.rs  state.rs  uploads.rs  workspaces.rs
src/server/dtos/: analytics.rs  auth.rs  catalog.rs  common.rs  payees.rs  splits.rs  uploads.rs  workspaces.rs
src/utils/: error.rs  helpers.rs  jwt.rs  mod.rs  s3.rs  statics.rs
src/workers/: ingestion.rs  mod.rs
