[package]
name = "doubledecker"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = "43"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
bytes = "1"
