[package]
name = "doubledecker"
version = "0.1.0"
edition = "2024"

[dependencies]
datafusion = "43"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-macros = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
arrow = { version = "53", features = ["prettyprint"] }
arrow-csv = "53"
arrow-json = "53"
parquet = { version = "53", features = ["arrow", "async"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
jsonwebtoken = "9"
base64 = "0.22"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.13"
object_store = { version = "0.11", features = ["aws", "gcp"] }
url = "2.5"
futures = "0.3"
rust_decimal = { version = "1", features = ["db-postgres", "serde"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
inngest = { path = "crates/inngest" }
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[profile.dev]
debug = 0
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1